--- a/web/resources/css/foundation.css
+++ b/web/resources/css/foundation.css
@@ -23,7 +23,8 @@ html {
    * Remove default margin.
    */
 body {
-  margin: 0; }
+  margin: 0;
+}
 
 /* HTML5 display definitions
      ========================================================================== */
