--- a/web/resources/css/workflow.css
+++ b/web/resources/css/workflow.css
@@ -10,6 +10,18 @@ and open the template in the editor.
 
 @charset "UTF-8";
 
+.center
+{
+    width : 50%; 
+    margin : auto; 
+}
+
+.blue-hover:hover 
+{
+    background-color: #6699ff;
+    opacity: 0.8;
+}
+
 #offCanvas
 {
   height: 100%;
@@ -22,27 +34,6 @@ and open the template in the editor.
     margin: 5%;
     font-weight: bold;
 }
-
-.hero {
-
-  background-size: cover;
-
-  height: 50vh;
-
-  overflow: hidden; }
-
-  .hero h1, .hero h2 {
-
-    color: #fff;
-
-    text-shadow: 1px 1px 1px #000;
-
-    padding: 1rem 0 0 1rem;
-
-    margin: 0; }
-
-
-
 .row {
 
   max-width: 1200px; }
@@ -50,151 +41,13 @@ and open the template in the editor.
 
 
 .footer {
- display: inline-block;
- width: 100%;
- 
- bottom: 0;
-  background-color: #e6e6e6;
-
-  text-align: center;
-
-  font-size: 1.2rem;
-
-  padding: 4rem; }
-
-  .footer .inline-list a {
-
-    display: inline-block;
-
-    width: 2rem;
-
-    height: 2rem;
-
-    background-color: #33383b;
-
-    border-radius: 2px;
-
-    font-size: 1.5rem;
-
-    color: #e6e6e6;
-
-    text-align: center;
-
-    line-height: 35px;
-
-    margin: 0 3px 0 0; }
-
-  .footer .contact {
-
-    list-style-type: none;
-
-    margin: 0;
-
-    text-align: left;
-
-    color: #000; }
-
-    .footer .contact li {
-
-      margin-bottom: 2rem; }
-
-      .footer .contact li p {
-
-        padding-left: 5rem; }
-
-    .footer .contact i {
-
-      position: absolute;
-
-      background-color: #33383b;
-
-      color: #fff;
-
-      font-size: 2rem;
-
-      border-radius: 50%;
-
-      line-height: 1;
-
-      margin: 0 0 0 -4rem;
-
-      vertical-align: middle;
-
-      padding: .25em .45em; }
-
-  .footer .copywrite {
-
-    color: #8f9296;
-
-    font-size: 0.875rem;
-
-    margin: 0 0 1rem 0; }
-
-  .footer .about {
-
-    color: #92999f;
-
-    font-size: 0.875rem;
-
-    margin: 0 0 1rem 0; }
-
-  .footer .footer-links a {
-
-    list-style: none;
-
-    font-weight: normal;
-
-    color: #000;
-
-    padding: 3rem 0 2rem;
-
-    margin: 0;
-
-    font-size: 0.875rem; }
-
-    .footer .footer-links a::after {
-
-      content: "•";
-
-      padding: 0 0.2rem 0 0.4rem; }
-
-    .footer .footer-links a:last-child::after {
-
-      content: "";
-
-      padding: 0 0.4rem 0 0.8rem; }
-
-  @media only screen and (min-width: 40.063em) {
-
-    .footer p {
-
-      text-align: left; }
-
-    .footer .social {
-
-      text-align: left;
-
-      margin: 0; }
-
-    .footer .contact {
-
-      text-align: left; }
-
-      .footer .contact > i {
-
-        margin-right: 1rem; } }
-
-
-
-.logo {
-
-  color: #000;
-
-  font-size: 1.5rem; }
-
-  .logo i {
-
-    margin-right: 0.5rem; }
-
-  
-
+position:relative;
+display: block;
+bottom:0;
+left:0;
+height:25px;
+width: 100%;
+background-color: #e6e6e6;
+text-align: center;
+font-size: small;
+}
