gestion des fichiers modeles

--- a/web/resources/css/foundation.css
+++ b/web/resources/css/foundation.css
@@ -380,7 +380,7 @@ body {
   font-weight: normal;
   line-height: 1.5;
   color: #0a0a0a;
-  background: #f2f2f2;
+  background: #d9d9d9;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale; }
 
