--- a/web/resources/css/workflow.css
+++ b/web/resources/css/workflow.css
@@ -63,7 +63,7 @@ left:0;
 height:25px;
 width: 100%;
 /*background-color: #e6e6e6;b2bec5*/
-background-color: #e6e6e6;
+background-color: #f2f2f2;
 text-align: center;
 font-size: small;
 }
