--- a/web/resources/css/foundation.css
+++ b/web/resources/css/foundation.css
@@ -3149,7 +3149,7 @@ table.hover tr:nth-of-type(even):hover {
     clear: both; }
   .top-bar,
   .top-bar ul {
-    background-color: #e6e6e6; }
+    background-color: #f2f2f2; }
   .top-bar a {
     color: #2199e8; }
   .top-bar input {
